# liboci

./: Cargo.toml  README.md  build-disabled.rs  docker-compose.yml
.github/: FUNDING.yml
examples/: gen_schema.rs
samples/: library-ubuntu-config.json
samples/bitnami-postgresql/: index.json
samples/ubuntu/: index.json
schema/: config-schema.json  content-descriptor.json  defs-descriptor.json  defs.json  image-index.json  image-manifest-schema.json
src/: lib.rs
tests/: local.rs
zot/: Dockerfile  config.json
