[package]
name = "liboci"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde", "now"] }
either = { version = "1.12.0", features = ["serde"] }
indexmap = { version = "2.2.6", features = ["serde"] }
schemars = { version = "0.8.21", features = ["chrono", "url", "bytes", "either", "indexmap2"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
url = { version = "2.5.0", features = ["serde"] }
base64 = "0.22.1"
thiserror = "1.0.61"
derive_builder = "0.20.0"

[dev-dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
similar-asserts = "1.5.0"

#[build-dependencies]
#anyhow = "1.0.86"
#rustfmt-wrapper = "0.2.1"
#schemars = "0.8.21"
#serde = { version = "1.0.202", features = ["derive"] }
#serde_json = "1.0.117"
#typify = {git = "https://github.com/oxidecomputer/typify.git"}